# mtuci-rs

./: Cargo.toml  README.md
hw/hw1/src/: main.rs
hw/hw2/: Cargo.toml
hw/hw2/src/: task1.rs  task2.rs
rust_documentation/: Cargo.toml
rust_documentation/ch10/ch10-1/src/: main.rs
rust_documentation/ch10/ch10-2/src/: main.rs
rust_documentation/ch10/ch10-3/src/: main.rs
rust_documentation/ch13/ch13-1/src/: main.rs
rust_documentation/ch16/ch16-2/src/: main.rs
rust_documentation/ch16/ch16-3/src/: main.rs
rust_documentation/ch2/src/: main.rs
rust_documentation/ch3/ch3-1/src/: main.rs
rust_documentation/ch3/ch3-2/src/: main.rs
rust_documentation/ch3/ch3-5/src/: main.rs
rust_documentation/ch3/ch3-hw/: Cargo.toml
rust_documentation/ch3/ch3.1/: Cargo.toml
rust_documentation/ch3/ch3.1/src/: main.rs
rust_documentation/ch4/ch4-1/src/: main.rs
rust_documentation/ch4/ch4-2/src/: main.rs
rust_documentation/ch4/ch4-3/src/: main.rs
rust_documentation/ch5/ch5-1/src/: main.rs
rust_documentation/ch5/ch5-2/src/: main.rs
rust_documentation/ch5/ch5-3/src/: main.rs
rust_documentation/ch6/ch6-1/src/: main.rs
rust_documentation/ch6/ch6-2/src/: main.rs
rust_documentation/ch6/ch6-3/src/: main.rs
rust_documentation/ch7/ch7-4/: Cargo.toml
rust_documentation/ch7/ch7-4/src/: main.rs
rust_documentation/ch7/ch7-5/: Cargo.toml
rust_documentation/ch7/restaurant/src/: lib.rs
rust_documentation/ch8/ch8-1/src/: main.rs
rust_documentation/ch8/ch8-2/src/: main.rs
rust_documentation/ch9/ch9-1/: Cargo.toml
rust_documentation/ch9/ch9-2/src/: main.rs
(+1 files in other folders)
