[workspace]
members = [

    "ch2",

    "ch3/ch3-1",
    "ch3/ch3-2",
    "ch3/ch3-3",
    "ch3/ch3-5",

    "ch4/ch4-1",
    "ch4/ch4-2",
    "ch4/ch4-3",

    "ch5/ch5-1",
    "ch5/ch5-2",
    "ch5/ch5-3",

    "ch6/ch6-1",
    "ch6/ch6-2",
    "ch6/ch6-3",

    "ch7/ch7-2",
    "ch7/ch7-3",
    "ch7/ch7-4",
    "ch7/ch7-5",    

    ]
