[workspace]
members = [

    "ch2",

    "ch3/ch3-1",
    "ch3/ch3-2",
    "ch3/ch3-3",
    "ch3/ch3-5",

    "ch4/ch4-1",
    "ch4/ch4-2",
    "ch4/ch4-3",

    "ch5/ch5-1",
    "ch5/ch5-2",
    "ch5/ch5-3",

    "ch6/ch6-1",
    "ch6/ch6-2",
    "ch6/ch6-3",

    "ch7/ch7-2",
    "ch7/ch7-4",
    "ch7/ch7-5",    
    "ch7/restaurant",

    "ch8/ch8-1",
    "ch8/ch8-2",
    "ch8/ch8-3",

    "ch9/ch9-1",
    "ch9/ch9-2",

    "ch10/ch10-1",
    "ch10/ch10-2",
    "ch10/ch10-3",

    "ch13/ch13-1",

    "ch16/ch16-1", 
    "ch16/ch16-2", 


    ]
